# coding_challenges

./: .gitignore  README.md  day1.py  day1_input.txt  day2.py  day2_2_for_loop.py  day2_input.txt  day3.py  terminal_drawing.py
advent_of_code/2019/: README.md  day1_2.py  day2.py  day2_2_combinations.py  day2_layout.txt  day3.py
challenge2020may/: w1-2_jewels_and_stones.py  w1-7_cousins_in_binary_tree.py  w2-1_straight_line.py  w2-2_perfect_square_alt3.py
dart.dev/: const_stuff.dart
docs.scala-lang.org/: hello.scala
docs.scala-lang.org/tour/: 01.scala
exercism/elm/: .gitignore
exercism/zig/: .gitignore
guide.elm-lang.org/: package-lock.json
guide.elm-lang.org/src/: Buttons.elm  Form.elm  Pyramid.elm  Reverse.elm
haskell_by_example/ch3_nl_reimpl/: CHANGELOG.md  Test.hs  getProgName.hs  hello_world.hs  package.yaml  test.txt
haskell_by_example/ch5_ladder/: EveryCombination.hs  ladder.cabal  package.yaml
leetcode/: .gitignore
leetcode/sql50/: 01_1757_mariadb_recyclable_and_low_fat.sql  01_1757_postgresql_recyclable_and_low_fat.sql  02_584_find_customer_referee.sql  03_595_big_countries.sql  04_1148_articel_views_1.sql  05_1683_invalid_tweets.sql  07_1068_product_sales_analysis_1.sql  (+47 more)
nix.dev/: default-nixkpgs-url.nix  default.nix  setup_incus.nu  shell.nix
other/: two_children_problem.py
stackoverflow_answers/: .gitignore
stackoverflow_answers/python/how can i parse free-text time intervals/: answer.md  answer.py  answer_re.py  answer_with_dateutil.py  pyproject.toml
ziglings.org/: .gitignore  integer_overflow.zig  quiz8_super_bonus.zig
(+229 files in other folders)
